--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     "require": {
         "php": "^8.2",
         "bezhansalleh/filament-shield": "^3.3",
+        "endroid/qr-code": "^6.0",
         "filament/filament": "3.3",
         "laravel/framework": "^12.0",
         "laravel/telescope": "^5.10",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
-        "simplesoftwareio/simple-qrcode": "^4.2",
         "twilio/sdk": "^8.6"
     },
     "require-dev": {
