--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "bezhansalleh/filament-shield": "^3.3",
         "endroid/qr-code": "^6.0",
         "filament/filament": "3.3",
+        "filament/spatie-laravel-settings-plugin": "^3.3",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
