--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "dependencies": {
         "@inertiajs/react": "^2.0.17",
         "clsx": "^2.1.1",
+        "i18next": "^25.7.3",
         "lucide-react": "^0.554.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-hot-toast": "^2.5.2",
+        "react-i18next": "^16.5.0",
         "react-use-wizard": "^2.3.0",
         "zod": "^4.0.14"
     }
